added section 2,3 and 4

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./styles/sec3.css">
     <link rel="stylesheet" href="./styles/sec4.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -20,7 +22,8 @@
             <div class="banner">
                 <img src="./assets/Group.png" alt="">
                 <h2>"In the near future, I hope to become a Developer"</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
                 <button class="btn2">Contact with me</button>
             </div>
         </nav>
@@ -28,11 +31,13 @@
     <main>
         <section class="sec1">
             <div class="part1">
-                <h2>Why Web Development??</h2>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <h2 class="h1">Why Web Development??</h2>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
             </div>
             <div class="part2">
-                <div class><h3>I will Do Coding and Change The World</h3>
+                <div class>
+                    <h3>I will Do Coding and Change The World</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <button class="btn3">Learn more</button>
                 </div>
@@ -40,25 +45,108 @@
             </div>
             <div class="part2">
                 <img src="./assets/Group 3.png" alt="">
-                <div class><h3>I will help People by creating Modern Web System</h3>
+                <div class>
+                    <h3>I will help People by creating Modern Web System</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <button class="btn3">Learn more</button>
                 </div>
             </div>
             <div class="part2">
-                <div class><h3>I will Do Coding and Change The World</h3>
+                <div class>
+                    <h3>I will Do Coding and Change The World</h3>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                     <button class="btn3">Learn more</button>
                 </div>
                 <img src="./assets/Group 4.png" alt="">
             </div>
         </section>
-        <section class="sec2"></section>
-        <section class="sec3"></section>
-        <section class="sec4"></section>
+        <section class="sec2">
+            <div class="sec2-1">
+                <h1 class="h1">My inspiration</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
+            </div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xjKzC6r5q5s?si=lqUEMYlm7s7pZ7gX"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </section>
+        <section class="sec3">
+            <section class="sec3-1">
+                <h1 class="h1">My Current Target</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
+                <div class="sec3-1-tags">
+                    <div class="html">
+                        <img src="./assets/html.png" alt="">
+                        <h2>HTML</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                    <div class="css">
+                        <img src="./assets/css.png" alt="">
+                        <h2>CSS</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                    <div class="js">
+                        <img src="./assets/js.png" alt="">
+                        <h2>JavaScript</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+            </section>
+            <section class="sec3-2">
+                <h1 class="h1">My Next Target</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text.</p>
+                <div class="sec3-2-tags">
+                    <img src="./assets/react.png" alt="">
+                    <div>
+                        <h1 class="h1">ReactJS</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+                <div class="sec3-2-tags">
+                    <img src="./assets/nodejs.png" alt="">
+                    <div>
+                        <h1 class="h1">NodeJS</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+                <div class="sec3-2-tags">
+                    <img src="./assets/mongodb.png" alt="">
+                    <div>
+                        <h1 class="h1">MongoDB</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+                            been the industry's standard dummy text.</p>
+                        <a href="">Learn More</a>
+                    </div>
+                </div>
+
+            </section>
+        </section>
+        <section class="sec4">
+            <section>
+                <div class="sec4-text">
+                    <h1 class="h1">I need Support</h1>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                </div>
+                <div class="sec4-write">
+                    <textarea  id="" placeholder="Suggest me any feedback for me"></textarea>
+                    <button>Submit</button>
+                </div>
+            </section>
+        </section>
     </main>
     <footer>
 
     </footer>
 </body>
+
 </html>
