--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/sec2.css">
     <link rel="stylesheet" href="./styles/sec3.css">
     <link rel="stylesheet" href="./styles/sec4.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 
 <body>
@@ -81,19 +82,19 @@
                         <img src="./assets/html.png" alt="">
                         <h2>HTML</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href="">Learn More</a>
+                        <a href="https://www.w3schools.com/html/" target="_blank">Learn More</a>
                     </div>
                     <div class="css">
                         <img src="./assets/css.png" alt="">
                         <h2>CSS</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href="">Learn More</a>
+                        <a href="https://www.w3schools.com/css/" target="_blank">Learn More</a>
                     </div>
                     <div class="js">
                         <img src="./assets/js.png" alt="">
                         <h2>JavaScript</h2>
                         <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        <a href="">Learn More</a>
+                        <a href="https://www.w3schools.com/js/" target="_blank">Learn More</a>
                     </div>
                 </div>
             </section>
@@ -107,7 +108,7 @@
                         <h1 class="h1">ReactJS</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text.</p>
-                        <a href="">Learn More</a>
+                        <a href="https://www.w3schools.com/react/" target="_blank">Learn More</a>
                     </div>
                 </div>
                 <div class="sec3-2-tags">
@@ -116,7 +117,7 @@
                         <h1 class="h1">NodeJS</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text.</p>
-                        <a href="">Learn More</a>
+                        <a href="https://www.w3schools.com/nodejs/" target="_blank">Learn More</a>
                     </div>
                 </div>
                 <div class="sec3-2-tags">
@@ -125,7 +126,7 @@
                         <h1 class="h1">MongoDB</h1>
                         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text.</p>
-                        <a href="">Learn More</a>
+                        <a href="https://www.w3schools.com/mongodb/" target="_blank">Learn More</a>
                     </div>
                 </div>
 
@@ -145,7 +146,12 @@
         </section>
     </main>
     <footer>
-
+        <h2>An Open Commitment by Awlad Hossain</h2>
+        <div class="icons">
+            <img src="./assets/facebook.png" alt="">
+            <img src="./assets/github.png" alt="">
+            <img src="./assets/linkedin-icon 1.png" alt="">
+        </div>
     </footer>
 </body>
 
