media query for nav

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <section class="sec1">
+        <section class="sec1 hide">
             <div class="part1">
                 <h2 class="h1">Why Web Development??</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -61,7 +61,7 @@
                 <img src="./assets/Group 4.png" alt="">
             </div>
         </section>
-        <section class="sec2">
+        <section class="sec2 hide">
             <div class="sec2-1">
                 <h1 class="h1">My inspiration</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -72,7 +72,7 @@
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
-        <section class="sec3">
+        <section class="sec3 hide">
             <section class="sec3-1">
                 <h1 class="h1">My Current Target</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -132,7 +132,7 @@
 
             </section>
         </section>
-        <section class="sec4">
+        <section class="sec4 hide">
             <section>
                 <div class="sec4-text">
                     <h1 class="h1">I need Support</h1>
@@ -145,7 +145,7 @@
             </section>
         </section>
     </main>
-    <footer>
+    <footer class="hide">
         <h2>An Open Commitment by Awlad Hossain</h2>
         <div class="icons">
             <img src="./assets/facebook.png" alt="">
