added responsive on sec1,sec2,sec3

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </nav>
     </header>
     <main>
-        <section class="sec1 hide">
+        <section class="sec1">
             <div class="part1">
                 <h2 class="h1">Why Web Development??</h2>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
@@ -61,18 +61,20 @@
                 <img src="./assets/Group 4.png" alt="">
             </div>
         </section>
-        <section class="sec2 hide">
+        <section class="sec2">
             <div class="sec2-1">
                 <h1 class="h1">My inspiration</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text.</p>
             </div>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/xjKzC6r5q5s?si=lqUEMYlm7s7pZ7gX"
+            <div class="sec2-2">
+                <iframe  src="https://www.youtube.com/embed/xjKzC6r5q5s?si=lqUEMYlm7s7pZ7gX"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
-        <section class="sec3 hide">
+        <section class="sec3">
             <section class="sec3-1">
                 <h1 class="h1">My Current Target</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
