--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
             </section>
         </section>
-        <section class="sec4 hide">
+        <section class="sec4">
             <section>
                 <div class="sec4-text">
                     <h1 class="h1">I need Support</h1>
@@ -147,7 +147,7 @@
             </section>
         </section>
     </main>
-    <footer class="hide">
+    <footer>
         <h2>An Open Commitment by Awlad Hossain</h2>
         <div class="icons">
             <img src="./assets/facebook.png" alt="">
